again initial commit

--- a/1prjt/index.html
+++ b/1prjt/index.html
@@ -9,7 +9,7 @@
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="1prjt\style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -48,7 +48,7 @@
                         <a href="#" class="btn">order now</a>
                     </div>
                     <div class="image">
-                        <img  width="70%" src="1prjt\images\spaghetti-with-vegetablesbroccolitomatoespeppers-isolated-white-background.jpg" alt="">
+                        <img  width="70%" src="images\spaghetti-with-vegetablesbroccolitomatoespeppers-isolated-white-background.jpg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide slide">
@@ -61,7 +61,7 @@
                         <a href="#" class="btn">order now</a>
                     </div>
                     <div class="image">
-                        <img width="70%" src="1prjt\images\delicious-chicken-table.jpg" alt="">
+                        <img width="70%" src="images\delicious-chicken-table.jpg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide slide">
@@ -74,7 +74,7 @@
                         <a href="#" class="btn">order now</a>
                     </div>
                     <div class="image">
-                        <img width="70%" src="1prjt\images\tasty-top-view-sliced-pizza-italian-traditional-round-pizza.jpg" alt="">
+                        <img width="70%" src="images\tasty-top-view-sliced-pizza-italian-traditional-round-pizza.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="1prjt\images\delicious-chicken-table.jpg"  alt="" width="80%" >
+                <img src="images\delicious-chicken-table.jpg"  alt="" width="80%" >
                 <h3>tasty food</h3>
                 <div class="stars">]
                     <i class="fas fa-star"></i>
@@ -104,7 +104,22 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="1prjt\images\delicious-chicken-table.jpg"  alt="" width="70%">
+                <img src="images\delicious-chicken-table.jpg"  alt="" width="80%">
+                <h3>tasty food</h3>
+           <div class="stars">]
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$15.99</span>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images\delicious-chicken-table.jpg"  alt="" width="80%">
                 <h3>tasty food</h3>
                 <div class="stars">]
                     <i class="fas fa-star"></i>
@@ -119,7 +134,7 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="1prjt\images\delicious-chicken-table.jpg"  alt="" width="70%">
+                <img src="images\delicious-chicken-table.jpg" width="70%" alt="">
                 <h3>tasty food</h3>
                 <div class="stars">]
                     <i class="fas fa-star"></i>
@@ -134,7 +149,7 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="1prjt\images\delicious-chicken-table.jpg" width="70%" alt="">
+                <img src="images\delicious-chicken-table.jpg" alt="" width="70%">
                 <h3>tasty food</h3>
                 <div class="stars">]
                     <i class="fas fa-star"></i>
@@ -149,22 +164,7 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="1prjt\images\delicious-chicken-table.jpg" alt="" width="70%">
-                <h3>tasty food</h3>
-                <div class="stars">]
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                </div>
-                <span>$15.99</span>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-            <div class="box">
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-eye"></a>
-                <img src="1prjt\images\delicious-chicken-table.jpg"  alt="" width="70%">
+                <img src="images\delicious-chicken-table.jpg"  alt="" width="70%">
                 <h3>tasty food</h3>
                 <div class="stars">]
                     <i class="fas fa-star"></i>
@@ -186,7 +186,7 @@
 
 
 
-    <script src="1prjt\javascript.js"></script>
+    <script src="javascript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     
 </body>
